# ia32-arch

./: CMakeLists.txt  README.md  todo.md
include/: intrinsics.h  macros.h  types.h
include/x86/: apic.h  atomic.h  common.h  cpuid.h  cr.h  interrupts.h  intrinsics.h  io.h  macros.h  meta.h  msr.h  mtrr.h  rflags.h  segmentation.h  segments.h
include/x86/paging/: bit32.h  ia32e.h  pae.h  paging.h
include/x86/vmx/: controls.h  ept.h  error.h  segments.h  vmcs.h  vmexit.h  vmx.h
src/: intrinsics.cpp
src/x86/: apic.cpp  cpuid.cpp  cr.cpp  interrupts.cpp  intrinsics.cpp  mtrr.cpp  segmentation.cpp  segments.cpp
src/x86/paging/: bit32.cpp  ia32e.cpp  pae.cpp  paging.cpp
src/x86/vmx/: ept.cpp  vmx.cpp
